<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.1</version>
    <relativePath></relativePath>
    <!-- lookup parent from repository -->
  </parent>
  <groupId>org.example</groupId>
  <artifactId>jib-demo</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>jib-demo</name>
  <description>jib-demo</description>
  <properties>
    <!--
      1. 需要先到上一層目錄中，執行: docker build -t jib-demo .
      2. 再回到這層目錄, 執行: mvn jib:dockerBuild
    -->
    <container-base-image>docker://jib-demo</container-base-image>
    <container-image-project>demo</container-image-project>
    <container-image-repository>harbor.softleader.com.tw</container-image-repository>
    <java.version>17</java.version>
    <jib-maven-plugin.version>3.4.0</jib-maven-plugin.version>
    <jib-jvm-flags-extension-maven.version>1.0.3</jib-jvm-flags-extension-maven.version>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <version>${jib-maven-plugin.version}</version>
        <configuration>
          <from>
            <image>${container-base-image}</image>
          </from>
          <to>
            <image>${container-image-repository}/${container-image-project}/${project.artifactId}</image>
            <tags>
              <tag>${project.version}</tag>
            </tags>
          </to>
          <container>
            <entrypoint>sh,/tmp/entrypoint.sh</entrypoint>
            <jvmFlags>
              <jvmFlag>-server</jvmFlag>
              <jvmFlag>-XX:+UseZGC</jvmFlag>
              <jvmFlag>-Dfile.encoding=UTF-8</jvmFlag>
              <jvmFlag>-Djava.net.preferIPv4Stack=true</jvmFlag>
              <jvmFlag>-XshowSettings:vm</jvmFlag>
              <jvmFlag>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005</jvmFlag>
            </jvmFlags>
            <args>
              <arg>-Xdebug</arg>
            </args>
            <ports>
              <port>8080</port>
              <port>5005</port>
            </ports>
            <creationTime>USE_CURRENT_TIMESTAMP</creationTime>
          </container>
          <pluginExtensions>
            <pluginExtension>
              <implementation>tw.com.softleader.cloud.tools.jib.maven.JvmFlagsExtension</implementation>
            </pluginExtension>
          </pluginExtensions>
        </configuration>
        <dependencies>
          <dependency>
            <groupId>tw.com.softleader.cloud.tools</groupId>
            <artifactId>jib-jvm-flags-extension-maven</artifactId>
            <version>${jib-jvm-flags-extension-maven.version}</version>
          </dependency>
        </dependencies>
      </plugin>
    </plugins>
  </build>

</project>
